feat: openlayers geoserver 연동

--- a/src/main/webapp/WEB-INF/templates/front/layouts/main.html
+++ b/src/main/webapp/WEB-INF/templates/front/layouts/main.html
@@ -50,8 +50,8 @@
     <th:block layout:fragment="addScript"></th:block>
 
     <!-- open layers -->
-    <script th:src="@{common/js/map/ol.js}"></script>
-    <link rel="stylesheet" th:href="@{common/css/map/ol.css}" />
+    <script th:src="@{front/js/map/ol.js}"></script>
+    <link rel="stylesheet" th:href="@{front/css/map/ol.css}" />
   </head>
   <body>
     <header th:replace="~{front/outlines/header::common}"></header>
