design: front/list 페이지 작성 및 controller 연결 수정

--- a/src/main/webapp/WEB-INF/templates/front/list/list.html
+++ b/src/main/webapp/WEB-INF/templates/front/list/list.html
@@ -10,9 +10,9 @@
 
 </main>
 
-<script>
+<!--<script>
     const { popup } = commonLib;
     const detail = document.getElementById("detail");
     detail.onclick = () => popup.open('/list/detail', 450, 450);
-</script>
+</script>-->
 </html>
