--- a/src/main/webapp/WEB-INF/templates/front/dashboard/dashboard.html
+++ b/src/main/webapp/WEB-INF/templates/front/dashboard/dashboard.html
@@ -4,6 +4,12 @@
       layout:decorate="~{front/layouts/main}">
 <main layout:fragment="content">
 <h1>대시보드</h1>
+    차트 테스트
+    <div>
+        <canvas id="myChart"></canvas>
+    </div>
+
+
 
 
 </main>
