feat: 지도 사이드메뉴 추가

--- a/src/main/webapp/WEB-INF/templates/front/map/map.html
+++ b/src/main/webapp/WEB-INF/templates/front/map/map.html
@@ -4,18 +4,61 @@
 		layout:decorate="~{front/layouts/main}">
 <main layout:fragment="content">
 	<div class="flex">
-		<section class="aside">
-			<button type="button" th:text="#{수위}"></button>
-			<button type="button" >
+		<section class="asideBtns">
+			<button type="button" data-target="wl">
+				<span th:text="#{수위}"></span>
+			</button>
+			<button type="button" data-target="rf">
 				<i class="xi-pouring"></i>
 				<span th:text="#{강수량}"></span>
 			</button>
-			<button type="button" th:text="#{유량}"></button>
-			<button type="button">
+			<button type="button" data-target="flw">
+				<span th:text="#{유량}"></span>
+			</button>
+			<button type="button" data-target="cctv">
 				<i class="xi-videocam"></i>
 				<span th:text="#{CCTV}"></span>
 			</button>
 		</section>
+
+		<section class="aside dn">
+			<form class="searchFrm flex">
+				<input type="hidden" id="target">
+				<input type="text" th:placeholder="#{관측소명_입력}">
+				<button type="button">
+					<i class="xi-search"></i>
+				</button>
+			</form>
+			<div>
+				<span class="targetNm"></span>
+
+				<select class="order" name="order">
+					<option class="orderNm" selected></option>
+					<option value="obserNm" th:text="#{관측소명}"></option>
+				</select>
+			</div>
+			<table>
+				<thead>
+					<tr>
+						<th id="colNm"></th>
+						<th id="colVal"></th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>나중에 관측소명이랑</td>
+						<td>실시간관측값 넣기(반복문)</td>
+					</tr>
+				</tbody>
+			</table>
+			<th:block></th:block>
+		</section>
+		<div>
+			<button type="button" class="angleBtn">
+				<i class="xi-angle-right-thin"></i>
+			</button>
+		</div>
+
 		<section class="map_area">
 			<div class="map_btns">
 				<button type="button" class="map_btn on" data-map="Base" th:text="#{일반지도}"></button>
