feat: 공통 레이어 팝업 js, css 작업

--- a/src/main/webapp/WEB-INF/templates/front/layouts/main.html
+++ b/src/main/webapp/WEB-INF/templates/front/layouts/main.html
@@ -36,6 +36,7 @@
     <th:block layout:fragment="addCss"></th:block>
 
     <script th:src="@{/common/js/common.js}"></script>
+    <script th:src="@{/common/js/layer.js}"></script>
     <script
       th:each="jsFile : ${addCommonScript}"
       th:src="@{/common/js/{file}.js(file=${jsFile})}"
