--- a/src/main/webapp/WEB-INF/templates/front/map/map.html
+++ b/src/main/webapp/WEB-INF/templates/front/map/map.html
@@ -13,6 +13,7 @@
 				<span th:text="#{강수량}"></span>
 			</button>
 			<button type="button" data-target="flw">
+				<i class="fa-light fa-water"></i>
 				<span th:text="#{유량}"></span>
 			</button>
 			<button type="button" data-target="cctv">
@@ -68,6 +69,10 @@
 				</button>
 				<button type="button" id="distance">
 					<span th:text="#{거리}"></span>
+				</button>
+				<button type="button" id="">
+					<i class="xi-save"></i>
+					<span th:text="#{저장}"></span>
 				</button>
 			</div>
 			<div id="map" class="map"></div>
