--- a/src/main/webapp/WEB-INF/templates/front/map/map.html
+++ b/src/main/webapp/WEB-INF/templates/front/map/map.html
@@ -70,7 +70,7 @@
 				<button type="button" id="distance">
 					<span th:text="#{거리}"></span>
 				</button>
-				<button type="button" id="">
+				<button type="button" id="save_map">
 					<i class="xi-save"></i>
 					<span th:text="#{저장}"></span>
 				</button>
