feat: overview map 추가

--- a/src/main/resources/static/common/css/style.css
+++ b/src/main/resources/static/common/css/style.css
@@ -1,9 +1,19 @@
+:root{
+    --main-color: #191D31;
+    --font-color: #D9D9DD;
+}
+
 .dn {
 	display: none;
 }
 
 .flex{
     display: flex;
+}
+
+.font-18px{
+    font-size: 18px;
+    font-weight: 500;
 }
 
 /* 팝업 공통 S */
