--- a/src/main/webapp/WEB-INF/templates/front/layouts/main.html
+++ b/src/main/webapp/WEB-INF/templates/front/layouts/main.html
@@ -51,7 +51,7 @@
     <th:block layout:fragment="addScript"></th:block>
 
     <!-- open layers -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.15.1/css/ol.css" type="text/css">
+    <link rel="stylesheet" type="text/css" th:href="@{/front/css/map/ol.css}" />
     <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.15.1/build/ol.js"></script>
   </head>
   <body>
