--- a/src/main/webapp/WEB-INF/templates/front/map/map.html
+++ b/src/main/webapp/WEB-INF/templates/front/map/map.html
@@ -5,18 +5,20 @@
 <main layout:fragment="content">
 	<div class="flex">
 		<section class="asideBtns">
-			<button type="button" data-target="wl">
+			<button class="font-18px" type="button" data-target="wl">
+				<br />
 				<span th:text="#{수위}"></span>
 			</button>
-			<button type="button" data-target="rf">
-				<i class="xi-pouring"></i>
+			<button class="font-18px" type="button" data-target="rf">
+				<i class="xi-pouring"></i><br />
 				<span th:text="#{강수량}"></span>
 			</button>
-			<button type="button" data-target="flw">
+			<button class="font-18px" type="button" data-target="flw">
+				<br />
 				<span th:text="#{유량}"></span>
 			</button>
-			<button type="button" data-target="cctv">
-				<i class="xi-videocam"></i>
+			<button class="font-18px" type="button" data-target="cctv">
+				<i class="xi-videocam"></i><br />
 				<span th:text="#{CCTV}"></span>
 			</button>
 		</section>
