ListData, Pagination, list.html, 테이블css, request, infoService

--- a/src/main/webapp/WEB-INF/templates/front/list/list.html
+++ b/src/main/webapp/WEB-INF/templates/front/list/list.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{front/layouts/main}">
+<main layout:fragment="content" >
     <h1>관측소 정보</h1>
     <form action="/search" method="get">
         <h2>검색</h2>
@@ -11,32 +14,34 @@
         <input type="text" id="Oanaysis" name="code" placeholder="전체">
         <button type="submit">검색</button>
     </form>
-    <table border="1">
-        <tr>
-            <th width="50">연번</th>
-            <th width="50">관측소 명</th>
-            <th width="50">관측소 유형</th>
-            <th width="50">관측소 코드</th>
-            <th width="50">관측 정보</th>
-            <th width="50">수정</th>
-            <th width="50">삭제</th>
-            <th width="50">환경설정</th>
-        </tr>
-        <!-- 조회 결과가 존재 한다면 리스트 돌리기-->
-        <tr>
-            <th width="50"></th>
-            <th width="50"></th>
-            <th width="50"></th>
-            <th width="50"></th>
-            <th width="50"></th>
-            <th width="50"></th>
-            <th width="50"></th>
-            <th width="50"></th>
-        </tr>
 
-    </table>
+    <div class="divTable minimalistBlack" th:object="${RequestObservatory}" th:each="item : ${}">
+        <div class="divTableHeading">
+            <div class="divTableRow">
+                <div th:text="#{연번}" class="divTableHead">head1</div>
+                <div th:text="#{관측소 명}" class="divTableHead">head2</div>
+                <div th:text="#{관측소 유형}" class="divTableHead">head3</div>
+                <div th:text="#{관측소 코드}" class="divTableHead">head4</div>
+                <div th:text="#{관측 정보}" class="divTableHead">head4</div>
+                <div th:text="#{수정}" class="divTableHead">head4</div>
+                <div th:text="#{삭제}" class="divTableHead">head4</div>
+                <div th:text="#{환경설정}" class="divTableHead">head4</div>
+            </div>
+        </div>
+        <div class="divTableBody">
+            <div class="divTableRow">
+                <div class="divTableCell">cell1_1</div>
+                <div class="divTableCell">cell2_1</div>
+                <div class="divTableCell">cell3_1</div>
+                <div class="divTableCell">cell4_1</div>
+                <div class="divTableCell">cell5_1</div>
+                <div class="divTableCell">cell6_1</div>
+                <div class="divTableCell">cell7_1</div>
+                <div class="divTableCell">cell8_1</div>
+            </div>
 
-
+        </div>
+    </div>
 </main>
 
 <!--<script>
