feat: 거리 한번에 한개씩만 잴 수있도록 수정

--- a/src/main/resources/static/front/css/map/map.css
+++ b/src/main/resources/static/front/css/map/map.css
@@ -21,3 +21,9 @@
     background: var(--main-color);
     width: 100px;
 }
+
+.ol-tooltip-measure{
+    color: #222;
+    font-weight: 700;
+    font-size: 15px;
+}
