--- a/src/main/webapp/WEB-INF/templates/front/list/detail.html
+++ b/src/main/webapp/WEB-INF/templates/front/list/detail.html
@@ -1,1 +1,8 @@
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{front/layouts/main}">
+<main layout:fragment="content" >
 <h1>관측소 상세 정보</h1>
+</main>
+</html>
