fix: 면적 초기화 버튼 오류 수정, draw 파일 분리

--- a/src/main/webapp/WEB-INF/templates/front/map/map.html
+++ b/src/main/webapp/WEB-INF/templates/front/map/map.html
@@ -71,6 +71,9 @@
 				<button type="button" id="distance">
 					<span th:text="#{거리}"></span>
 				</button>
+				<button type="button" id="area">
+					<span th:text="#{면적}"></span>
+				</button>
 			</div>
 			<div id="map" class="map"></div>
 		</section>
