--- a/src/main/webapp/WEB-INF/templates/front/layouts/main.html
+++ b/src/main/webapp/WEB-INF/templates/front/layouts/main.html
@@ -13,6 +13,7 @@
       '}"></th:block> <th:block th:text="#{한강수자원관리플랫폼}"></th:block>
     </title>
 
+    <!-- XEIcon -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css"
