feat: 관측소 지도 팝업창 html 초안 작성

--- a/src/main/resources/static/common/css/popup_style.css
+++ b/src/main/resources/static/common/css/popup_style.css
@@ -12,13 +12,12 @@ a { color:#222; text-decoration: none; }
 .dn { display: none !important; }
 
 .title{
-    position: absolute;
-    left: 50%;
-    top: 10px;
-    transform: translate(50%, 0);
+    width: 100%;
+    text-align: center;
 }
 
 .popup_close{
+    cursor: pointer;
     border: none;
     background: none;
     position: absolute;
