--- a/src/main/resources/static/common/css/style.css
+++ b/src/main/resources/static/common/css/style.css
@@ -24,3 +24,16 @@
 #layer_popup { position: fixed; z-index: 101; background: #fff; border-radius: 5px; overflow: hidden; }
 #layer_popup iframe { border: 0; }
 /* 팝업 공통 E */
+
+/* 가로선 */
+.h-line{
+    width: 100%;
+    margin: 15px;
+    border-bottom: 2px solid #222;
+}
+
+/* 글자 가운데정렬 */
+.text-center{
+    width: 100%;
+    text-align: center;
+}
