--- a/src/main/webapp/WEB-INF/templates/front/list/list.html
+++ b/src/main/webapp/WEB-INF/templates/front/list/list.html
@@ -1,42 +1,70 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{front/layouts/main}">
+<main layout:fragment="content" >
     <h1>관측소 정보</h1>
-    <form action="/search" method="get">
-        <h2>검색</h2>
-        <label for="Ocode">관측소 코드 </label>
-        <input type="text" id="Ocode" name="code" placeholder="xxxxxxx">
-        <label for="Oname">관측소명</label>
-        <input type="text" id="Oname" name="code" placeholder="관측소 명을 입력하세요">
-        <label for="Oanaysis">관측변수</label>
-        <input type="text" id="Oanaysis" name="code" placeholder="전체">
-        <button type="submit">검색</button>
+    <form th:action="@{/list}" method="get" th:object="${listDataSearch}">
+        <div class="flex alc">
+            <div class="searchBtn"><div><i class="fa fa-search" aria-hidden="true"></i></div></div>
+            <div>검색</div>
+        </div>
+        <hr>
+        <div class="flex alc">
+            <label for="Ocode">관측소 코드 </label>
+            <input type="text" id="Ocode" name="code" placeholder="xxxxxxx">
+            <label for="Oname">관측소명</label>
+            <input type="text" id="Oname" name="code" placeholder="관측소 명을 입력하세요">
+            <label for="Oanaysis">관측변수</label>
+            <select name="type" th:field="*{type}">
+                <option value="ALL">전체</option>
+                <option value="rf">강수량</option>
+                <option value="wl">수위</option>
+                <option value="flw">유량</option>
+            </select>
+            <div class="search_btn">
+                <button type="submit" class="btn">검색</button>
+            </div>
+        </div>
     </form>
-    <table border="1">
-        <tr>
-            <th width="50">연번</th>
-            <th width="50">관측소 명</th>
-            <th width="50">관측소 유형</th>
-            <th width="50">관측소 코드</th>
-            <th width="50">관측 정보</th>
-            <th width="50">수정</th>
-            <th width="50">삭제</th>
-            <th width="50">환경설정</th>
-        </tr>
-        <!-- 조회 결과가 존재 한다면 리스트 돌리기-->
-        <tr>
-            <th width="50"></th>
-            <th width="50"></th>
-            <th width="50"></th>
-            <th width="50"></th>
-            <th width="50"></th>
-            <th width="50"></th>
-            <th width="50"></th>
-            <th width="50"></th>
-        </tr>
 
-    </table>
+    <div class="divTable minimalistBlack">
+        <div class="divTableHeading">
+            <div class="divTableRow">
+                <div th:text="#{연번}" class="divTableHead">head1</div>
+                <div th:text="#{관측소 명}" class="divTableHead">head2</div>
+                <div th:text="#{관측소 유형}" class="divTableHead">head3</div>
+                <div th:text="#{관측소 코드}" class="divTableHead">head4</div>
+                <div th:text="#{관측 정보}" class="divTableHead">head4</div>
+                <div th:text="#{수정}" class="divTableHead">head4</div>
+                <div th:text="#{삭제}" class="divTableHead">head4</div>
+                <div th:text="#{환경설정}" class="divTableHead">head4</div>
+            </div>
+        </div>
+        <div class="divTableBody"  th:if="${items != null && !items.isEmpty()}" th:each="item, status : ${items}">
 
-
+            <div class="divTableRow">
+                <div th:text="${status.count}"  class="divTableCell">cell1_1</div>
+                <div th:text="${item.obsnm}" class="divTableCell"></div>
+                <div th:text="${item.type}" class="divTableCell"><input type="hidden" name="obsknd" th:value="*{obstype}" th:id="*{'obsknd' + status.count}"></div>
+                <div th:text="${item.obscd}" class="divTableCell"><span th:text="*{obscd}"></span><input type="hidden" name="obscd" th:value="*{obscd}" th:id="*{'obscd_' + status.count}"></div>
+                <div class="divTableCell" th:data-obscd-id="*{'obscd_' + status.count}" th:data-obsknd-id="*{'obsknd' + status.count}">
+                    <i class="fa fa-search" aria-hidden="true"></i>
+                </div>
+                <div class="divTableCell">
+                    <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+                </div>
+                <div class="divTableCell">
+                    <i class="fa fa-trash-o" aria-hidden="true"></i>
+                </div>
+                <div class="divTableCell">
+                    <i class="xi-cog"></i>
+                </div>
+            </div>
+            <th:block th:unless="*{items != null}" th:text="#{데이터가 없습니다.}"></th:block>
+        </div>
+    </div>
+    <th:block th:replace="~{common/_pagination::pagination}"></th:block>
 </main>
 
 <!--<script>
