perform : 링크 오류 수정

--- a/src/main/webapp/WEB-INF/templates/front/outlines/header.html
+++ b/src/main/webapp/WEB-INF/templates/front/outlines/header.html
@@ -12,8 +12,8 @@
             <!-- 버튼 클릭 영역 -->
             <div>
             	<a th:href="@{/map}" th:text=#{지도}></a>
-            	<a th:href="@{/head}" th:text=#{목록}></a>
-            	<a th:text=#{대시보드}></a>
+            	<a th:href="@{/list}" th:text=#{목록}></a>
+            	<a th:href="@{/dashboard}"th:text=#{대시보드}></a>
             </div>
             <!-- 시간남으면 로그인 추가 -->
         </div>
