feat: 대쉬보드 테스트 차트

--- a/src/main/webapp/WEB-INF/templates/front/dashboard/dashboard.html
+++ b/src/main/webapp/WEB-INF/templates/front/dashboard/dashboard.html
@@ -5,12 +5,14 @@
 <main layout:fragment="content">
 <h1>대시보드</h1>
     차트 테스트
+
     <div>
-        <canvas id="myChart"></canvas>
+        <canvas id="myChartOne"></canvas>
     </div>
 
-
-
+    <div>
+        <canvas id="myChartTwo"></canvas>
+    </div>
 
 </main>
 </html>
