--- a/src/main/webapp/WEB-INF/templates/front/map/popup/flw.html
+++ b/src/main/webapp/WEB-INF/templates/front/map/popup/flw.html
@@ -8,16 +8,16 @@
         <div class="h-line"></div>
         <div class="divTable">
             <div class="divTableRow">
-                <div th:text="#{코드}"></div>
-                <div th:text="*{obscd}"></div>
+                <div class="divTableCell" th:text="#{코드}"></div>
+                <div class="divTableCell" th:text="*{obscd}"></div>
             </div>
             <div class="divTableRow">
-                <div th:text="#{유량값}"></div>
-                <div th:text="*{currentOb}"></div>
+                <div class="divTableCell" th:text="#{유량값}"></div>
+                <div class="divTableCell" th:text="*{currentOb}"></div>
             </div>
             <div class="divTableRow">
-                <div th:text="#{위치}"></div>
-                <div th:text="*{loc}"></div>
+                <div class="divTableCell" th:text="#{위치}"></div>
+                <div class="divTableCell" th:text="*{loc}"></div>
             </div>
         </div>
     </section>
