--- a/src/main/webapp/WEB-INF/templates/front/map/popup/rf.html
+++ b/src/main/webapp/WEB-INF/templates/front/map/popup/rf.html
@@ -8,20 +8,20 @@
         <div class="h-line"></div>
         <div class="divTable">
             <div class="divTableRow">
-                <div th:text="#{코드}"></div>
-                <div th:text="*{obscd}"></div>
+                <div class="divTableCell" th:text="#{코드}"></div>
+                <div class="divTableCell" th:text="*{obscd}"></div>
             </div>
             <div class="divTableRow">
-                <div th:text="#{현재강수량}"></div>
-                <div th:text="*{currentOb}"></div>
+                <div class="divTableCell" th:text="#{현재강수량}"></div>
+                <div class="divTableCell" th:text="*{currentOb}"></div>
             </div>
             <div class="divTableRow">
-                <div th:text="#{누적강수량}"></div>
-                <div th:text="*{reqOb}"></div>
+                <div class="divTableCell" th:text="#{누적강수량}"></div>
+                <div class="divTableCell" th:text="*{reqOb}"></div>
             </div>
             <div class="divTableRow">
-                <div th:text="#{위치}"></div>
-                <div th:text="*{loc}"></div>
+                <div class="divTableCell" th:text="#{위치}"></div>
+                <div class="divTableCell" th:text="*{loc}"></div>
             </div>
         </div>
     </section>
