--- a/src/main/resources/static/front/css/style.css
+++ b/src/main/resources/static/front/css/style.css
@@ -2,10 +2,14 @@ html{
     height: 100%;
 }
 body{
+    width: 100%;
     height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
 main{
-    height: 100%;
+    height: calc(100% - 100px);
 }
 .content{
     height: 100%;
