--- a/src/main/webapp/WEB-INF/templates/front/list/update.html
+++ b/src/main/webapp/WEB-INF/templates/front/list/update.html
@@ -1,1 +1,17 @@
-<h1>수정</h1>
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{front/layouts/main}">
+<main layout:fragment="content" >
+    <h1>관측소 정보 등록</h1>
+    <a th:href="@{/list}" th:text="#{목록으로}"></a>
+    <form name="frmJoin" method="post" th:action="@{/list/save}" autocomplete="off">
+        <input type="hidden" name="mode" value="update">
+        <div class="error global" th:each="err : ${#fields.globalErrors()}" th:text="${err}"></div>
+        <th:block th:replace="~{front/list/_form::form}"></th:block>
+    </form>
+    <div class="submit_btns">
+        <button type="submit" th:text="#{수정}"></button>
+    </div>
+</main>
+</html>
