feat: 대쉬보드 테스트 차트 수정중

--- a/src/main/webapp/WEB-INF/templates/front/dashboard/dashboard.html
+++ b/src/main/webapp/WEB-INF/templates/front/dashboard/dashboard.html
@@ -7,11 +7,19 @@
     차트 테스트
 
     <div>
-        <canvas id="myChartOne"></canvas>
+        <canvas id="myChart1"></canvas>
     </div>
 
     <div>
-        <canvas id="myChartTwo"></canvas>
+        <canvas id="myChart2"></canvas>
+    </div>
+
+    <div>
+        <canvas id="myChart3"></canvas>
+    </div>
+
+    <div>
+        <canvas id="myChart1_1"></canvas>
     </div>
 
 </main>
