--- a/src/main/resources/static/common/css/style.css
+++ b/src/main/resources/static/common/css/style.css
@@ -30,8 +30,11 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
-	line-height: 1;
-	height: 100%;
+	width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
 ol, ul {
 	list-style: none;
@@ -53,6 +56,19 @@ a{
 }
 
 /* css 초기화 코드 E */
+html{
+    height: 100%;
+}
+
+main{
+    height: calc(100% - 100px);
+}
+
+h2{
+    font-size: 25px;
+    font-weight: 700;
+    padding: 15px;
+}
 
 .dn {
 	display: none;
@@ -65,13 +81,16 @@ a{
     display: flex;
     flex-flow: column;
 }
+.grw-1{
+    flex-grow: 1;
+}
+.align-center{
+    align-items: center;
+}
 .flt-right{
     float: right;
 }
 
-.align-center{
-    align-items: center;
-}
 
 .font-18px{
     font-size: 18px;
@@ -176,4 +195,8 @@ div.minimalistBlack {
 
 .flex {
     display: flex;
+}
+
+.just-btw{
+    justify-content: space-between;
 }
