--- a/src/main/webapp/WEB-INF/templates/front/list/list.html
+++ b/src/main/webapp/WEB-INF/templates/front/list/list.html
@@ -46,13 +46,13 @@
             <div class="divTableRow">
                 <div th:text="${status.count}"  class="divTableCell">cell1_1</div>
                 <div th:text="${item.obsnm}" class="divTableCell"></div>
-                <div th:text="${item.type}" class="divTableCell">
+                <div class="divTableCell">
                     <span th:text="${item.type}"></span>
-                    <input type="hidden" name="type" th:value="*{type}" th:id="*{'type_' + status.count}">
+                    <input type="hidden" th:name="*{'type_' + status.count}" th:value="${item.type}" th:id="*{'type_' + status.count}">
                 </div>
                 <div class="divTableCell">
                     <span th:text="${item.obscd}"></span>
-                    <input type="hidden" name="obscd" th:value="${item.obscd}" th:id="*{'obscd_' + status.count}">
+                    <input type="hidden" th:name="*{'obscd_' + status.count}" th:value="${item.obscd}" th:id="*{'obscd_' + status.count}">
                 </div>
                 <div class="divTableCell" th:data-obscd-id="*{'obscd_' + status.count}" th:data-obsknd-id="*{'obsknd' + status.count}">
                     <i class="fa fa-search" aria-hidden="true"></i>
@@ -64,7 +64,7 @@
                     <i class="fa fa-trash-o" aria-hidden="true"></i>
                 </div>
                 <div class="divTableCell">
-                    <button type="button" class="settingBtn" th:data-obscd="*{'obscd_' + status.count}" data-url="/list/setting/">
+                    <button type="button" class="settingBtn" th:data-seq="${status.count}" data-url="/list/setting/">
                         <i class="xi-cog"></i>
                     </button>
                 </div>
