--- a/src/main/webapp/WEB-INF/templates/front/list/setting.html
+++ b/src/main/webapp/WEB-INF/templates/front/list/setting.html
@@ -1,1 +1,92 @@
-<h1>환경설정</h1>
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{front/layouts/main}">
+<main layout:fragment="content">
+    <section class="content">
+        <div class="flex just-btw title align-center">
+            <h2 th:text="#{환경설정}"></h2>
+            <button type="button" id="listBtn">
+                <i class="xi-list"></i>
+                <span th:text="#{목록}"></span>
+            </button>
+        </div>
+
+        <!-- 관측소 정보 -->
+        <div th:object="${requestObservatory}">
+
+            <div class="observatory flex mgn-bottom-10px">
+                <div>
+                    <span th:text="#{관측소명}"></span>
+                    :
+                    <span th:text="*{obsnm}"></span>
+                </div>
+                <span>|</span>
+                <div>
+                    <span th:text="#{관측유형}"></span>
+                    :
+                    <span th:text="*{type}"></span>
+                </div>
+            </div>
+            <form th:object="${requestObservatory}">
+                <div class="observatoryForm mgn-bottom-10px">
+                    <input type="hidden" th:value="*{obscd}">
+                    <div>
+                        <span th:text="#{사용여부}"></span>
+                        <input type="radio" name="clsyn" id="clsyn" value="운영">
+                    </div>
+                    <div>
+                        <span th:text="#{이상치_기준_설정}"></span>
+                        <input type="number" name="outlier">
+                    </div>
+                </div>
+                <button type="button" class="saveBtn mgn-bottom-10px" th:text="#{저장}"></button>
+            </form>
+        </div>
+        <!-- 관측소 데이터 검색 -->
+        <div class="observationSearch mgn-bottom-10px">
+            <div class="flex alc searchTxt">
+                <i class="fa fa-search" aria-hidden="true"></i>
+                <div>검색</div>
+            </div>
+            <form th:object="${requestObservation}" class="flex align-center obsForm">
+                <div class="grw-1">
+                    <span th:text="#{조회기간}"></span>
+                    <input name="sdate" type="date">
+                    ~
+                    <input name="edate" type="date">
+                </div>
+                <button type="button" class="searchBtn" th:text="#{검색}"></button>
+            </form>
+        </div>
+        <div class="divTable minimalistBlack">
+            <div class="divTableHeading">
+                <div class="divTableRow">
+                    <div class="divTableHead" th:text="#{연번}"></div>
+                    <div class="divTableHead" th:text="#{날짜}"></div>
+                    <div class="divTableHead" th:text="#{이상치}"></div>
+                    <div class="divTableHead" th:text="#{수정}"></div>
+                    <div class="divTableHead" th:text="#{삭제}"></div>
+                </div>
+            </div>
+            <div class="divTableBody">
+                <div class="divTableRow" th:if="${items != null}" th:each="item, status : ${items}" th:object="${item}">
+                    <div class="divTableCell" th:text="*{status.count}"></div>
+                    <div class="divTableCell" th:text="*{ymdhm}"></div>
+                    <div class="divTableCell" th:text="*{data}"></div>
+                    <div class="divTableCell">
+                        <i class="fa fa-search" aria-hidden="true"></i>
+                    </div>
+                    <div class="divTableCell">
+                        <i class="fa fa-trash-o" aria-hidden="true"></i>
+                    </div>
+                </div>
+
+                <div th:unless="${items != null}">
+                    <div th:text="#{데이터_없음}"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+</main>
+</html>
