--- a/src/main/resources/static/common/css/style.css
+++ b/src/main/resources/static/common/css/style.css
@@ -51,6 +51,15 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+button{
+    background: inherit ;
+    border:none;
+    box-shadow:none;
+    border-radius:0;
+    padding:0;
+    overflow:visible;
+    cursor:pointer
+}
 a{
     text-decoration: none;
 }
