--- a/src/main/webapp/WEB-INF/templates/front/list/list.html
+++ b/src/main/webapp/WEB-INF/templates/front/list/list.html
@@ -47,7 +47,7 @@
                 <div th:text="${status.count}"  class="divTableCell">cell1_1</div>
                 <div th:text="${item.obsnm}" class="divTableCell"></div>
                 <div class="divTableCell">
-                    <span th:text="${item.type}"></span>
+                    <span th:text="#{${item.type}}"></span>
                     <input type="hidden" th:name="*{'type_' + status.count}" th:value="${item.type}" th:id="*{'type_' + status.count}">
                 </div>
                 <div class="divTableCell">
