design : commonCss 연결하고 button rest 넣었습니다. feat : 관측소 유형도 한글로 변경했습니다. feat : ListDataSearch파일 이름 ObservatorySearch로 변경했습니다.

--- a/src/main/webapp/WEB-INF/templates/front/list/list.html
+++ b/src/main/webapp/WEB-INF/templates/front/list/list.html
@@ -4,7 +4,7 @@
       layout:decorate="~{front/layouts/main}">
 <main layout:fragment="content" >
     <h1>관측소 정보</h1>
-    <form th:action="@{/list}" method="get" th:object="${listDataSearch}">
+    <form th:action="@{/list}" method="get" th:object="${observatorySearch}">
         <div class="flex align-center">
             <div class="searchBtn"><div><i class="fa fa-search" aria-hidden="true"></i></div></div>
             <div>검색</div>
