feat: 관측소 환경설정 검색기능 추가

--- a/src/main/resources/static/front/css/list/setting.css
+++ b/src/main/resources/static/front/css/list/setting.css
@@ -84,6 +84,10 @@
     padding: 0 10px;
 }
 
+.obsForm input{
+    padding: 0 5px;
+}
+
 .searchBtn{
     background: var(--main-color);
     color: #fff;
