--- a/src/main/resources/static/front/css/list/style.css
+++ b/src/main/resources/static/front/css/list/style.css
@@ -1,4 +1,4 @@
-.searchBtn {
+.searchIcon {
     background-color: #000;
     width: 27px;
     height: 27px;
@@ -8,8 +8,15 @@
     align-items: center;
 }
 
-.searchBtn i {
+.searchIcon i {
     color: #fff;
+}
+
+.searchBtn button{
+    width: 40px;
+    height: 20px;
+    border: 2px solid;
+    background-color: var(--font-color);
 }
 
 .pagination>div {
