--- a/src/main/webapp/WEB-INF/templates/front/list/list.html
+++ b/src/main/webapp/WEB-INF/templates/front/list/list.html
@@ -6,7 +6,7 @@
     <h1>관측소 정보</h1>
     <form th:action="@{/list}" method="get" th:object="${observatorySearch}">
         <div class="flex align-center">
-            <div class="searchBtn"><div><i class="fa fa-search" aria-hidden="true"></i></div></div>
+            <div class="searchIcon"><div><i class="fa fa-search" aria-hidden="true"></i></div></div>
             <div>검색</div>
         </div>
         <hr>
@@ -22,7 +22,7 @@
                 <option value="wl">수위</option>
                 <option value="flw">유량</option>
             </select>
-            <div class="search_btn">
+            <div class="searchBtn">
                 <button type="submit" class="btn">검색</button>
             </div>
         </div>
@@ -45,7 +45,9 @@
 
             <div class="divTableRow">
                 <div th:text="${status.count}"  class="divTableCell">cell1_1</div>
-                <div th:text="${item.obsnm}" class="divTableCell"></div>
+
+                <div type="button" th:text="${item.obsnm}" class="divTableCell" data-toggle="modal" data-target="#obDetail" onclick="openObDetailModal()"></div>
+
                 <div class="divTableCell">
                     <span th:text="#{${item.type}}"></span>
                     <input type="hidden" th:name="*{'type_' + status.count}" th:value="${item.type}" th:id="*{'type_' + status.count}">
@@ -72,6 +74,7 @@
             <th:block th:unless="*{items != null}" th:text="#{데이터_없음}"></th:block>
         </div>
     </div>
+    <th:block th:replace="~{common/_pagination::pagination}"></th:block>
     <th:block th:replace="~{common/_pagination::pagination}"></th:block>
 </main>
 
